--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="page2">Select Your Tour Attractions</string>
     <string name="pageGps">Search GPS</string>
     <string name="page3">Plan Your Trip</string>
+    <string name="pageRoute">Search GPS</string>
     <string name="page4">wtf</string>
     <string name="page5">wtf</string>
 
