TopBar Hide, Board Data all success

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,8 @@
     <string name="pageGps">Search GPS</string>
     <string name="page3">Plan Your Trip</string>
     <string name="pageRoute">Search GPS</string>
-    <string name="page4">wtf</string>
-    <string name="page5">wtf</string>
+    <string name="page4">Boards</string>
+    <string name="page5">hohoho</string>
 
     <!--Status-->
 
