--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="trade">trade</string>
     <string name="reply">reply</string>
 
+    <string name="selectMenu">게시판을 선택하세요</string>
     <string name="boardTitle">리뷰모음</string>
     <string name="companyTitle">동행자구인</string>
     <string name="tradeTitle">거래시스템</string>
