Prototype7 - ui improvement all except routeGps

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="next_button">Next</string>
     <string name="close_button">Close</string>
     <string name="confirm_button">Confirm</string>
+    <string name="complete_button">Complete</string>
     <string name="send_button">Send Plan to DB</string>
     <string name="confirm_button_kor">확인</string>
 
